# NBody

./: .gitignore  NBody.cabal  README.md
src/: Constants.hs  Main.hs  Planet.hs  PlanetSystem.hs  SpaceVect.hs  Utils.hs
tests/: PlanetTest.hs  UtilsTest.hs
