name:           NBody
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Quentin Duval

executable NBody
  hs-source-dirs:  
                   src, 
                   tests
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl >=2.1.2 && <2.2,
                   deepseq >=1.3.0 && <1.4,
                   parallel >=3.2.0 && <3.3
  ghc-options:     -O2 -threaded -rtsopts -fexcess-precision -fforce-recomp
  other-modules:   
                   Planet,
                   SpaceVect,
                   Utils,
                   Constants,
                   PlanetSystem,
                   PlanetTest,
                   UtilsTest
  extensions:      BangPatterns

